# recipeBoxV1

./: README.md  db.sqlite3  manage.py  pyproject.toml
recipeBoxV1/: asgi.py  settings.py  urls.py  wsgi.py
recipes/: admin.py  forms.py  models.py  views.py
recipes/migrations/: 0001_initial.py  0002_auto_20200824_1358.py
recipes/static/css/: index.css
templates/: add_author.html  add_recipe.html  add_recipe_form.html  author_detail.html  generic_form.html  index.html  no_access.html  recipe_detail.html
