[tool.poetry]
name = "recipebox"
version = "0.1.0"
description = "Q4 assessment 2"
authors = ["Nikal Morgan <nikalmorgan11@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
